# InstruSense

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile.render  README.md  docker-compose.yml  generator-archi.py  pyproject.toml  start_services.sh  test_inference.py  transform_into_wav.py
.github/workflows/: ci_cd.yml
apps/api/: README.md  config.py  dependencies.py  main.py
apps/api/dto/: prediction.py
apps/api/routers/: prediction.py
apps/inference/: adapter.py  config.py  server.py
apps/interface/: README.md  config.py  conftest.py  server.py  test_interface.py
apps/interface/static/css/: style.css
apps/interface/static/js/: app.js  (+1 more)
apps/interface/templates/: index.html
apps/training/: dataset_loader.py  train_model.py
core/: exceptions.py
core/audio/: analyzer.py  processor.py
core/interfaces/: audio_port.py  model_loader_port.py  predictor_port.py
core/ml/: model_loader.py  postprocess.py  predictor.py
docker/: Dockerfile.api  Dockerfile.inference  Dockerfile.interface  api.Dockerfile  docker-compose.yml  inference.Dockerfile  interface.Dockerfile  training.Dockerfile
docs/: architecture.md
infra/logging/: config.py
infra/settings/: base.py
infra/utils/: paths.py
models/CNN10_v1/config/: audio_loader.py  import_weights.py  instruments.json  overseer.py  parameters.yaml  structure.py  thresholds.json
models/CNN10_v1/stats/: epoch_data.jsonl
scripts/dev/: start_dev.sh
services/: audio_adapter.py  model_loader_adapter.py  prediction_service.py
tests/: conftest.py
tests/integration/: test_api.py  test_inference.py  test_interface.py  test_interface_2.py
tests/unit/: test_dto.py  test_prediction_service.py
(+2 files in other folders)
